fixed registers backup

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,24 @@ hw5
 parser.output
 parser.tab.cpp
 test
+*.res
+*.in
+*.asm
+*.out
+Testing/parser.tab.hpp
+Testing/SymbolTable.cpp
+Testing/SymbolTable.hpp
+Testing/scanner.lex
+Testing/run_tests.tcl
+parser.tab.cpp
+Testing/add_main_to_tests.tcl
+Testing/bp.hpp
+Testing/bp.cpp
+Testing/makefile
+Testing/output.hpp
+Testing/output.cpp
+Testing/parser.ypp
+Testing/parser.hpp
+Testing/spim
+Testing/lex.yy.c
+Testing/exceptions.s
